--- a/wp-content/languages/admin-uk.po
+++ b/wp-content/languages/admin-uk.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WordPress - 4.6.x - Administration package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2016-10-14 15:47:08+0000\n"
+"PO-Revision-Date: 2016-10-18 10:33:15+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -10860,7 +10860,7 @@ msgstr "Чернетку збережено о %s."
 #. translators: draft saved date format, see https://secure.php.net/date
 #: wp-admin/includes/misc.php:885
 msgid "g:i:s a"
-msgstr "g:i:s a"
+msgstr "H:i:s"
 
 #: wp-admin/includes/ajax-actions.php:1273
 #: wp-admin/includes/ajax-actions.php:1278
